fixed login alignments

--- a/src/components/login/style.css
+++ b/src/components/login/style.css
@@ -3,8 +3,3 @@
     /* padding-top: 3rem; */
 }
 
-.login-box {
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .3rem;
-    margin-bottom: 2rem; 
-}
